fix: text color to white on dark mode for better visibility.

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -213,6 +213,7 @@ input {
 
 body.dark-mode input {
   background-color: rgba(255, 255, 255, 0.1);
+  color: var(--deep-white) !important;
 }
 
 .user-names,
